# solana-ai-dataset-indexer

./: .gitignore  Cargo.toml  gg.rs  gg.txt  known_wallets.tsv  meteora_bonding_curve.json  out.txt  pump_fun_launchpad.json  raydium_launchpad.json  readme.md  scenario.json  streamflow.json  swap_test.txt
__examples__/: index.js  package.json  test.py
libs/yellowstone-faithful/geyser-plugin-runner/: Cargo.toml
libs/yellowstone-faithful/geyser-plugin-runner/src/: node.rs
scripts/: install.sh
src/: account_backfill.rs  database.rs  main.rs  simulator.rs  spl_system_decoder.rs  src - Shortcut.lnk  types.rs  utils.rs
src/aggregator/: graph_schema.rs  link_graph.rs  mod.rs  tags.rs  token_stats.rs  wallet_stats.rs
src/handlers/: meteora_bonding_curve_handler.rs.txt  mod.rs  pump_fun_amm_handler.rs  pump_fun_amm_idl.rs  pump_fun_launchpad_handler.rs  pump_fun_launchpad_idl.rs  raydium_cpmm_handler.rs  raydium_launchpad_handler.rs  spl_token_handler.rs  streamflow_handler.rs  streamflow_idl.rs  system_handler.rs
src/services/: mod.rs  price_service.rs  solana_subscribers.rs
