[package]
name = "oldfaithful-geyser-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
agave-geyser-plugin-interface = "=2.2.1"
agave-transaction-view = "=2.2.1"
base64 = "0.22.1"
bincode = "1.3"
cid = "0.11"
crc = "3.3"
crossbeam-channel = "0.5"
fnv = "1.0"
multihash = "0.19"
openssl = { version = "0.10", features = ["vendored"] }
prost_011 = { package = "prost", version = "0.11.9" }
reqwest = { version = "0.11", features = ["json", "blocking", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
solana-accounts-db = "=2.2.1"
solana-entry = "=2.2.1"
solana-geyser-plugin-manager = "=2.2.1"
solana-hash = "=2.2.1"
solana-message = "=2.2.1"
solana-program = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-rpc = "=2.2.1"
solana-runtime = "=2.2.1"
solana-sdk = "=2.2.1"
solana-sdk-ids = "=2.2.1"
solana-storage-proto = "=2.2.1"
solana-transaction-status = "=2.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13"
